Fixed Register page in dark mode

--- a/cardDatabase/static/css/darkmode/dark_mode_overrides.css
+++ b/cardDatabase/static/css/darkmode/dark_mode_overrides.css
@@ -37,6 +37,12 @@ input[type=password]{
     border: 1px solid white;
 }
 
+input[type=email]{
+    background-color: #303134;
+    color: white;
+    border: 1px solid white;
+}
+
 textarea {
     background-color: #303134;
     color: white;
@@ -228,4 +234,21 @@ a.closebtn{
 
 .select-wrapper .search-wrap .md-form input{
     color:black;
+}
+
+.register-title, .register-form-container {
+    background-color: #303134;
+    color: white;
+}
+
+.register-form-container {
+    border-bottom: 2px solid #351543;
+    border-left: 2px solid #351543;
+    border-right: 2px solid #351543;
+}
+
+.register-title {
+    border-top: 2px solid #351543;
+    border-left: 2px solid #351543;
+    border-right: 2px solid #351543;
 }
